feat: add slides for concepts <wip>

--- a/index.html
+++ b/index.html
@@ -44,21 +44,55 @@
                   data-background-image="/public/backgrounds/questions.png"
                   data-background-size="cover"
                   data-background-opacity="0.5"></section>
-        <section data-load="slides/06_concepts_.html"
+        <section data-load="slides/06_concepts_A_Theoremes.html"
                   data-background-image="/public/backgrounds/connected-dots-2.png"
                   data-background-size="cover"
                   data-background-opacity="0.5"></section>
-        <section data-load="slides/06_concepts_ddd.html"
+        <section data-load="slides/06_concepts_B_Architecture.html"
                   data-background-image="/public/backgrounds/connected-dots-2.png"
                   data-background-size="cover"
                   data-background-opacity="0.5"></section>
-        <section data-load="slides/06_concepts_cqrs.html"
+        <section data-load="slides/06_concepts_B_ddd.html"
                   data-background-image="/public/backgrounds/connected-dots-2.png"
                   data-background-size="cover"
                   data-background-opacity="0.5"></section>
-        <section data-load="slides/07_communication.html"></section>
-        <section data-load="slides/08_miseenoeuvre.html"></section>
-        <section data-load="slides/09_advancedpatterns.html"></section>
+        <section data-load="slides/06_concepts_C_Resilience.html"
+                  data-background-image="/public/backgrounds/connected-dots-2.png"
+                  data-background-size="cover"
+                  data-background-opacity="0.5"></section>
+        <section data-load="slides/06_concepts_D_Tests.html"
+                  data-background-image="/public/backgrounds/connected-dots-2.png"
+                  data-background-size="cover"
+                  data-background-opacity="0.5"></section>
+        <section data-load="slides/06_concepts_E_Gouvernance.html"
+                  data-background-image="/public/backgrounds/connected-dots-2.png"
+                  data-background-size="cover"
+                  data-background-opacity="0.5"></section>              
+         <section data-load="slides/07_communication_.html"
+                  data-background-image="/public/backgrounds/connected-dots-2.png"
+                  data-background-size="cover"
+                  data-background-opacity="0.5"></section>
+        <section data-load="slides/07_communication_cqrs.html"
+                  data-background-image="/public/backgrounds/connected-dots-2.png"
+                  data-background-size="cover"
+                  data-background-opacity="0.5"></section>
+        <section data-load="slides/07_communication_eventsourcing.html"
+                  data-background-image="/public/backgrounds/connected-dots-2.png"
+                  data-background-size="cover"
+                  data-background-opacity="0.5"></section>
+
+        <section data-load="slides/08_miseenoeuvre.html"
+                  data-background-image="/public/backgrounds/connected-dots-2.png"
+                  data-background-size="cover"
+                  data-background-opacity="0.5"></section>
+        <section data-load="slides/09_advancedpatterns.html"
+                  data-background-image="/public/backgrounds/connected-dots-2.png"
+                  data-background-size="cover"
+                  data-background-opacity="0.5"></section>
+        <section data-load="slides/10_TravauxPratiques.html"
+                  data-background-image="/public/backgrounds/connected-dots-2.png"
+                  data-background-size="cover"
+                  data-background-opacity="0.5"></section>
       </div>
     
     </div>
