--- a/slides/03_programme.html
+++ b/slides/03_programme.html
@@ -9,7 +9,7 @@
 </section>
 <section>
     <h2>Conception d'applications distribuées</h2>
-    <h3>Jour 1 - Les concepts de base</h3>
+    <h3>Les concepts de base</h3>
     <ul>
         <li>Historique des architectures</li>
         <li>Types d'architectures serveur</li>
@@ -21,7 +21,7 @@
 </section>
 <section>
     <h2>Conception d'applications distribuées</h2>
-    <h3>Jour 2 - la communication</h3>
+    <h3>La communication</h3>
     <ul>
         <li>API Gateway</li>
         <li>Communication synchrone</li>
@@ -31,7 +31,7 @@
 </section>
 <section>
     <h2>Conception d'applications distribuées</h2>
-    <h3>Jour 3 - mise en oeuvre</h3>
+    <h3>Mise en oeuvre</h3>
     <ul>
         <li>Conteneurisation - Docker</li>
         <li>Orchestration - Kubernetes</li>
@@ -43,7 +43,7 @@
 </section>
 <section>
     <h2>Conception d'applications distribuées</h2>
-    <h3>Jour 4 - les bonnes pratiques</h3>
+    <h3>Les bonnes pratiques</h3>
     <ul>
         <li>Logging distribué</li>
         <li>Monitoring</li>
